--- a/client/src/assets/less/app.less
+++ b/client/src/assets/less/app.less
@@ -35,3 +35,11 @@ html {
 .icon-arrow-up:before {
     content: "\e901";
 }
+
+.icon-menu3:before {
+    content: "\e900";
+}
+
+.containers {
+    padding: 20px;
+}
