--- a/client/src/assets/less/header.less
+++ b/client/src/assets/less/header.less
@@ -5,7 +5,7 @@
     background-size: cover;
     text-align: center;
     padding: 100px 0 120px;
-    h1 {
+    .site-header-title {
         color: #fff;
         font-size: 4.8rem;
     }
@@ -18,14 +18,29 @@
     }
     @media (min-width: screen-sm) {
 	padding: 60px 0 80px;
-        h1 {
+        .site-header-title {
             font-size: 6.0rem;
         }
     }
     @media (min-width: @screen-md) {
     	padding: 80px 0 100px;
-        h1 {
+        .site-header-title {
             font-size: 7.2rem;
         }
     }
+}
+.site-header.article {
+    background-image: url('../img/article-bg.jpg');
+}
+.site-header.album {
+    background-image: url('../img/album-bg.jpg');    
+}
+.site-header.music {
+    background-image: url('../img/music-bg.jpg');    
+}
+.site-header.message {
+    background-image: url('../img/message-bg.jpg');    
+}
+.site-header.about {
+     background-image: url('../img/about-bg.jpg');   
 }
