为导航菜单添加图标并修改部分样式

--- a/client/src/assets/less/app.less
+++ b/client/src/assets/less/app.less
@@ -28,16 +28,26 @@ html {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-menu3:before {
+.icon-home:before {
     content: "\e900";
 }
-
+.icon-blog:before {
+    content: "\e906";
+}
+.icon-images:before {
+    content: "\e903";
+}
+.icon-music:before {
+    content: "\e904";
+}
+.icon-profile:before {
+    content: "\e907";
+}
+.icon-menu:before {
+    content: "\e905";
+}
 .icon-arrow-up:before {
     content: "\e901";
-}
-
-.icon-menu3:before {
-    content: "\e900";
 }
 
 .containers {
