完成文章列表的显示

--- a/client/src/assets/less/about.less
+++ b/client/src/assets/less/about.less
@@ -1,19 +1,15 @@
 @import url(./variable.less);
-.site-about {
-  margin: 20px auto;
-  max-width: 300px;
-  font-size: 1.6rem;
-  color: #666;
-  @media (min-width: @screen-xs) {
-    max-width: 500px;
-  }
-  @media (min-width: @screen-sm) {
-    max-width: 700px;
-  }
-  @media (min-width: @screen-md) {
-    max-width: 900px;
-  }
-  h3 {
-    color: #333;
+.site-content.about {
+  .site-content-main {
+      margin: 20px auto;
+      width: 80%;
+      font-size: 1.4rem;
+      color: #666;
+      @media (min-width: @screen-sm) {
+        font-size: 1.6rem;
+      }
+      h3 {
+        color: #333;
+      }
   }
 }
