--- a/client/src/assets/less/article.less
+++ b/client/src/assets/less/article.less
@@ -1,3 +1,10 @@
-.site-article {
-    text-align: center;
+.site-content.article {
+    .site-content-main {
+        .site-content-title {
+            margin: 0;
+        }
+    }
+    .site-content-main.error {
+        color: red;
+    }
 }
