增加评论框组件

--- a/client/src/assets/less/app.less
+++ b/client/src/assets/less/app.less
@@ -313,7 +313,13 @@ th {
 }
 /* common class styles */
 .btn {
-    outline: 0;
+    background-color: #00a1d6;
+    border: 1px #00a1d6 solid;
+    color: #fff;
+    text-align: center;
+    &:active {
+        outline: 0;
+    }
 }
 .link {
     color: #fff;
