--- a/client/src/assets/sass/app.scss
+++ b/client/src/assets/sass/app.scss
@@ -1,7 +1,6 @@
 @import 'base/reset';
 @import 'base/media';
 @import 'base/font';
-
 $color: #000;
 $color-dark: darken($color, 10%);
 $color-lite: lighten($color, 10%);
@@ -13,6 +12,7 @@ $color-lite: lighten($color, 10%);
     left: 0;
     margin: auto;
 }
+
 .site {
     display: flex;
     flex-direction: column;
@@ -22,7 +22,8 @@ $color-lite: lighten($color, 10%);
     .site-navbar-button {
         opacity: 0.6;
         background-color: transparent;
-        position: absolute;;
+        position: absolute;
+        ;
         z-index: 2;
         top: 0.36rem;
         right: 0.4rem;
@@ -36,7 +37,7 @@ $color-lite: lighten($color, 10%);
             @include position-center;
             right: auto;
             width: 100%;
-            background: linear-gradient( to bottom, #fff, #fff 20%, transparent 20%, transparent 40%, #fff 40%, #fff 60%, transparent 60%, transparent 80%, #fff 80%, #fff 100% );
+            background: linear-gradient( to bottom, #fff, #fff 20%, transparent 20%, transparent 40%, #fff 40%, #fff 60%, transparent 60%, transparent 80%, #fff 80%, #fff 100%);
             transition: opacity 0.2s ease-out, width 0.2s 0.2s ease-out;
         }
         &:after {
@@ -66,7 +67,7 @@ $color-lite: lighten($color, 10%);
             }
             &:after {
                 opacity: 1;
-                transform: translate3d(0,0,0) rotate(360deg);
+                transform: translate3d(0, 0, 0) rotate(360deg);
                 transition: transform 0.4s 1s ease-out, opacity 0.4s 1s ease-out;
             }
         }
@@ -78,7 +79,7 @@ $color-lite: lighten($color, 10%);
         left: 0;
         width: 100%;
         height: 100%;
-        transform: translate3d(0,0,0);
+        transform: translate3d(0, 0, 0);
         backface-visibility: hidden;
         overflow: hidden;
         &:before {
@@ -105,7 +106,7 @@ $color-lite: lighten($color, 10%);
             position: fixed;
             top: 50%;
             left: 50%;
-            transform: translate3d(-50%,-50%,0);
+            transform: translate3d(-50%, -50%, 0);
             backface-visibility: hidden;
             perspective: 1000;
             color: white;
@@ -115,16 +116,16 @@ $color-lite: lighten($color, 10%);
                 font-size: .4rem;
                 opacity: 0;
                 text-align: center;
-                transform: translate3d(0,36px,0);
+                transform: translate3d(0, 36px, 0);
                 a {
                     color: #fff;
                     &:hover {
-                        text-shadow: 2px 2px 8px rgba(0,0,0,.9);
+                        text-shadow: 2px 2px 8px rgba(0, 0, 0, .9);
                     }
                 }
                 .open & {
                     opacity: 1;
-                    transform: translate3d(0,0,0);
+                    transform: translate3d(0, 0, 0);
                     transition: transform 0.2s ease-out, opacity 0.2s ease-out;
                     @for $i from 1 to 6 {
                         &:nth-child(#{$i}) {
@@ -146,7 +147,7 @@ $color-lite: lighten($color, 10%);
             position: absolute;
             top: 0.36rem;
             left: 0.4rem;
-            color: rgba(255,255,255,.5);
+            color: rgba(255, 255, 255, .5);
             font-size: 0.4rem;
             transition: color 0.3s ease;
             &:hover {
@@ -174,7 +175,7 @@ $color-lite: lighten($color, 10%);
             background-image: url('../img/music-bg.jpg');
         }
         &.about {
-             background-image: url('../img/about-bg.jpg');
+            background-image: url('../img/about-bg.jpg');
         }
     }
     .site-content {
@@ -392,22 +393,6 @@ $color-lite: lighten($color, 10%);
                     }
                 }
             }
-            .goTop {
-                width: 48px;
-                height: 48px;
-                line-height: 48px;
-                color: #fff;
-                font-size: 36px;
-                border: 0;
-                outline: 0;
-                background-color: rgba(0, 0, 0, .5);
-                position: fixed;
-                right: 32px;
-                bottom: 32px;
-            }
-            .goTop.hidden {
-                display: none;
-            }
         }
         @media screen and (max-width: 960px) {
             flex-direction: column;
@@ -431,24 +416,21 @@ $color-lite: lighten($color, 10%);
             }
         }
     }
-}
-.blog-enter {
-  opacity: 0.01;
-  transition: opacity .5s ease-in;
+    .goTop {
+        width: 48px;
+        height: 48px;
+        line-height: 48px;
+        color: #fff;
+        font-size: 36px;
+        border: 0;
+        outline: 0;
+        background-color: rgba(0, 0, 0, .5);
+        position: fixed;
+        right: 32px;
+        bottom: 32px;
+    }
 }
 
-.blog-enter.blog-enter-active {
-  opacity: 1;
-}
-
-.blog-leave {
-  opacity: 1;
-  transition: opacity .5s ease-in;
-}
-
-.blog-leave.blog-leave-active {
-  opacity: 0;
-}
 @keyframes menu-animation {
     0% {
         opacity: 0;
