--- a/client/src/assets/sass/base/_media.scss
+++ b/client/src/assets/sass/base/_media.scss
@@ -1,19 +1,23 @@
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 480px) {
+    html {
+        font-size: 30px;
+    }
     body {
         font-size: 14px;
     }
 }
-@media screen and (min-width: 321px) and (max-width: 413px) {
+@media screen and (min-width: 480px) and (max-width: 800px) {
+    html {
+        font-size: 50px;
+    }
     body {
         font-size: 16px;
     }
 }
-@media screen and (min-width: 414px) and (max-width: 639px) {
-    body {
-        font-size: 17px;
+@media screen and (min-width: 800px) {
+    html {
+        font-size: 75px;
     }
-}
-@media screen and (min-width: 640px) {
     body {
         font-size: 18px;
     }
